# efi-conv

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.agents/skills/ai-commit-attribution/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build-image.yml  main.yml
.opencode/: opencode.json
.opencode/skills/: ai_commit_attribution.md
src/efi_conv/: __init__.py  avefi.py  check.py  cli.py  from_.py  main.py
src/efi_conv/avportal/: README.md  __init__.py  avportal.py
src/efi_conv/avportal/ntm_4_avefi/: __init__.py  ntm_4_av_efi.py  ntm_4_av_efi_schema.py
src/efi_conv/core/: avefi.py  check.py  cli.py  from_.py  settings.py  utils.py
src/efi_conv/fmdu/: __init__.py  csv.py
tests/: conftest.py
tests/avportal/: clip14743.xml  clip27540.xml  efi_records.json  test_avportal.py
tests/core/: data_analytic_works.json  test_check.py
tests/fmdu/: efi_records.json  sample_data.csv  test_fmdu_csv.py
