[project]
name = "efi-conv"
version = "0.1.0"
description = "Convert from other metadata schemas to AVefi (and possibly back again)"
authors = [
    {name = "AVefi Working Group", email = "contact@av-efi.net"},
]
repository = "https://github.com/AV-EFI/efi-conv"
documentation = "https://github.com/AV-EFI/efi-conv"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "xsdata[cli,lxml]>=24.7",
    "click>=8.1.7",
    "appdirs>=1.4.4",
    "avefi-schema",
    "jsonschema>=4.25.1",
    "requests>=2.32.5",
]

[project.scripts]
efi-conv = "efi_conv.main:cli_main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.uv.sources]
avefi-schema = { git = "https://github.com/AV-EFI/av-efi-schema.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
