[project]
name = "efi-conv"
version = "0.1.0"
description = "Convert from other metadata schemas to AVefi (and possibly back again)"
authors = [
    {name = "AVefi Working Group", email = "contact@av-efi.net"},
]
repository = "https://github.com/AV-EFI/efi-conv"
documentation = "https://github.com/AV-EFI/efi-conv"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "xsdata[cli,lxml]>=24.7",
    "click>=8.1.7",
    "appdirs>=1.4.4",
    "avefi_schema @ git+https://github.com/AV-EFI/av-efi-schema.git",
    "jsonschema>=4.25.1",
    "requests>=2.32.5",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
efi-conv = "efi_conv.main:cli_main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
extend-exclude = ["generated"]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # FastAPI
    "FAST",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # white space
    "W",
]
ignore = [
    "D100", "D101", "D102", "D103", "D104",
    "D206", "D300", "W191",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true
